[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket-slogger = { version = "1.0.0", features = ["terminal"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15.1"
base64 = "0.22.1"
log = "0.4.22"
